--- a/index.html
+++ b/index.html
@@ -23,9 +23,60 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main>
+    <section class="header">
+      <h1>Retreat from the desk, return refreshed.</h1>
+    </section>
+    <aside>
+      <h3>Want to join the next retreat?</h3>
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <br>
+      <h3>Find out more</h3>
+      <div class="signup-form">
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
+    </aside>
+
+  </main>
+ 
+ <footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <address>
+          
+        </address>
+      </div>
+
+      <div class="social">
+
+      </div>
+
+      <div class="copyright">
+
+      </div>
+    </div>
+  </div>   
+ </footer>
+
+
+ </body>
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
