--- a/index.html
+++ b/index.html
@@ -39,18 +39,90 @@
   <main>
     <section class="header">
       <h1>Retreat from the desk, return refreshed.</h1>
+      <div class="hero-area">
+        <img src="img/header-bkgd.png" alt="Hero Background"/>
     </section>
+
     <aside>
-      <h3>Want to join the next retreat?</h3>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-      <br>
-      <h3>Find out more</h3>
-      <div class="signup-form">
+      <div class="form-description">
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <br>
+        <h3>Find out more</h3>
+      </div>
+      <div class="form">
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
       </div>
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </div>
+        </article>
+
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </div>
+        </article>
+
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>Private chef team providing on demand meals &ndash; just like your team kitchen.</p>
+          </div>
+        </article>
+
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
+          </div>
+        </article>
+
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </div>
+        </article>
+
+        <article>
+          <div class="features-items">
+            <p class="fontawesome-icon"></p>
+          </div>
+          <div class="features-items-description">
+            <p>Dedicated computer room for times that you must wifi.</p>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <article>
+          <h2>Be a better team in 5 days, like these.</h2>
+          <img src="img/retreat-review.png" alt="Retreat Review"/>
+          <h3>LaCrue Bottling Co.<br>October 2017</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </article>
+      </div>
+    </section>
   </main>
  
  <footer>
@@ -58,23 +130,25 @@
     <div class="footer-content">
       <div class="contact">
         <address>
-          
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
       </div>
 
       <div class="social">
+        <h3>Social</h3>
+        <div class="social-icons">
 
+        </div>
       </div>
 
       <div class="copyright">
-
+        <p>Copyright 2019 Unplugged</p>
       </div>
     </div>
   </div>   
  </footer>
-
-
- </body>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
