--- a/about/index.html
+++ b/about/index.html
@@ -26,11 +26,12 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+      <a href="#"><img src="../img/logo.png" alt="Unplugged Logo"/></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../index.html" target="_blank">Home</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
@@ -38,6 +39,44 @@
   </header>
 
   <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h2>Our Mission &ndash; we want to make you the team you always wanted to be.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          <br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+        </div> <!-- mission-content -->
+      </div> <!-- content wrapper -->
+    </section> <!-- mission --> 
+
+    <section class="map">
+      <figure>
+        <!-- placeholder for Google map -->
+      </figure>
+    </section> <!-- map -->
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <div class="contact">
+          <h2>Contact us, because you all need this.</h2>
+          <div class="general-information">
+            <h3>General information</h3>
+            <address>
+              <p>333 Main St, Lake Geneva, WI 53147</p>
+              <p>555&dash;555&dash;5555</p>
+              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            </address>
+          </div> <!-- general-information -->
+
+          <div class="chat-information">
+            <h3>Chat with a Facilitator</h3>
+            <p>555&dash;555&dash;5555</p>
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          </div> <!-- chat-information -->
+        </div> <!-- content-wrapper -->
+      </div> <!-- contact -->
+    </section> <!-- contact-section -->
 
   </main>
  
@@ -46,16 +85,21 @@
     <div class="footer-content">
       <div class="contact">
         <address>
-          
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
       </div>
 
       <div class="social">
-
+        <h3>Social</h3>
+        <div class="social-icons">
+          <!-- Placeholder social icons -->
+        </div>
       </div>
 
       <div class="copyright">
-
+        <p>Copyright 2019 Unplugged</p>
       </div>
     </div>
   </div>   
