--- a/faq/index.html
+++ b/faq/index.html
@@ -30,15 +30,38 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
+          <li><a href="../index.html" target="_blank">Home</a></li>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-
+   <main>
+    <section class="faq-section">
+      <div class="content-wrapper">
+        <div class="faq">
+          <h2>Frequently Asked Questions</h2>
+            <div class="question">
+              <h3>How do I get to the Unplugged retreat?</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+            </div> <!-- question -->
+            <div class="question">
+              <h3>What kind of team is right for Unplugged retreat?</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+            </div> <!-- question -->
+            <div class="question">
+              <h3>What size of teams can you accomodate?</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+            </div> <!-- question -->
+            <div class="question">
+              <h3>Is there really no wifi available?</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+            </div> <!-- question -->
+          </div> <!-- faq -->
+      </div> <!-- content wrapper -->
+    </section> <!-- faq-section --> 
   </main>
  
  <footer>
@@ -46,16 +69,21 @@
     <div class="footer-content">
       <div class="contact">
         <address>
-          
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
       </div>
 
       <div class="social">
-
+        <h3>Social</h3>
+        <div class="social-icons">
+          <!-- Placeholder social icons -->
+        </div>
       </div>
 
       <div class="copyright">
-
+        <p>Copyright 2019 Unplugged</p>
       </div>
     </div>
   </div>   
