--- a/faq/index.html
+++ b/faq/index.html
@@ -26,11 +26,10 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+      <a href="#"><img src="../img/logo.png" alt="Unplugged Logo"/></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../index.html" target="_blank">Home</a></li>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
