--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
-      <div class="header-divider"></div>
       <nav>
+        <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+        <div class="header-divider"></div>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
@@ -47,10 +47,9 @@
       <div class="form-description">
         <h3>Want to join the next retreat?</h3>
         <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        <br>
-        <h3>Find out more</h3>
       </div>
       <div class="form">
+        <h3>Find out more</h3>
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
       </div>
@@ -129,9 +128,9 @@
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
+        <h3>Contact</h3>
         <address>
-          <h3>Contact</h3>
-          <p>555-555-5555</p>
+          <p>555&dash;555&dash;5555</p>
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
       </div>
