Updated content and styles, added images

--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -63,21 +66,25 @@
     </section> <!-- faq-section --> 
   </main>
  
- <footer>
+<footer>
   <div class="content-wrapper">
     <div class="footer-content">
-      <div class="contact">
+      <div class="footer-contact">
         <address>
           <h3>Contact</h3>
           <p>555-555-5555</p>
-          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          <p><a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
         </address>
       </div>
 
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-          <!-- Placeholder social icons -->
+          <ul>
+            <li><img src="../img/facebook.png" alt="Facebook"></li>
+            <li><img src="../img/twitter.png" alt="Twitter"></li>
+            <li><img src="../img/instagram.png" alt="Instagram"></li>
+          </ul>
         </div>
       </div>
 
