--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <div class="content-wrapper">
+      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+      <div class="header-divider"></div>
       <nav>
-        <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
-        <div class="header-divider"></div>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
@@ -38,9 +41,9 @@
 
   <main>
     <section class="header">
-      <h1>Retreat from the desk, return refreshed.</h1>
       <div class="hero-area">
-        <img src="img/header-bkgd.png" alt="Hero Background"/>
+      <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
     </section>
 
     <aside>
@@ -57,9 +60,10 @@
 
     <section class="features">
       <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of &ndash; without the bad wifi</h2>
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+            <img src="img/campground.png" alt="Campground"/>
           </div>
           <div class="features-items-description">
             <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -68,7 +72,7 @@
 
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+            <img src="img/bed.png" alt="Bed"/>
           </div>
           <div class="features-items-description">
             <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
@@ -77,7 +81,7 @@
 
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+          <img src="img/utensils.png" alt="Utensils"/>
           </div>
           <div class="features-items-description">
             <p>Private chef team providing on demand meals &ndash; just like your team kitchen.</p>
@@ -86,7 +90,7 @@
 
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+            <img src="img/shoe-prints.png" alt="Shoe Prints"/>
           </div>
           <div class="features-items-description">
             <p>5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
@@ -95,7 +99,7 @@
 
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+            <img src="img/smile.png" alt="Smile"/>
           </div>
           <div class="features-items-description">
             <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
@@ -104,7 +108,7 @@
 
         <article>
           <div class="features-items">
-            <p class="fontawesome-icon"></p>
+            <img src="img/wifi.png" alt="Wifi"/>
           </div>
           <div class="features-items-description">
             <p>Dedicated computer room for times that you must wifi.</p>
@@ -117,8 +121,10 @@
         <article>
           <h2>Be a better team in 5 days, like these.</h2>
           <img src="img/retreat-review.png" alt="Retreat Review"/>
-          <h3>LaCrue Bottling Co.<br>October 2017</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <div class="review-text">
+            <h3>LaCrue Bottling Co. October 2017</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
         </article>
       </div>
     </section>
@@ -127,7 +133,7 @@
  <footer>
   <div class="content-wrapper">
     <div class="footer-content">
-      <div class="contact">
+      <div class="footer-contact">
         <h3>Contact</h3>
         <address>
           <p>555&dash;555&dash;5555</p>
@@ -138,7 +144,11 @@
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-
+          <ul>
+            <li><img src="img/facebook.png" alt="Facebook"></li>
+            <li><img src="img/twitter.png" alt="Twitter"></li>
+            <li><img src="img/instagram.png" alt="Instagram"></li>
+          </ul>
         </div>
       </div>
 
