--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +33,6 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../index.html" target="_blank">Home</a></li>
           <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
@@ -43,16 +45,16 @@
       <div class="content-wrapper">
         <div class="mission-content">
           <h2>Our Mission &ndash; we want to make you the team you always wanted to be.</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
         </div> <!-- mission-content -->
       </div> <!-- content wrapper -->
     </section> <!-- mission --> 
 
     <section class="map">
       <figure>
-        <!-- placeholder for Google map -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47005.049894133976!2d-88.46153269508129!3d42.58043589242193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584e9f85c4509%3A0x9eb9a6efc12afe43!2sLake%20Geneva%2C%20Wisconsin%2053147%2C%20USA!5e0!3m2!1sde!2sse!4v1623241336952!5m2!1sde!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </figure>
     </section> <!-- map -->
 
@@ -83,18 +85,22 @@
  <footer>
   <div class="content-wrapper">
     <div class="footer-content">
-      <div class="contact">
+      <div class="footer-contact">
         <address>
           <h3>Contact</h3>
           <p>555-555-5555</p>
-          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          <p><a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
         </address>
       </div>
 
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-          <!-- Placeholder social icons -->
+          <ul>
+            <li><img src="../img/facebook.png" alt="Facebook"></li>
+            <li><img src="../img/twitter.png" alt="Twitter"></li>
+            <li><img src="../img/instagram.png" alt="Instagram"></li>
+          </ul>
         </div>
       </div>
 
