Styled form buttons

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="form">
         <h3>Find out more</h3>
-        <input type="text" name="name" value="email address">
+        <input type="text" name="name" value="name@email.com">
         <input type="button" value="Download Itinerary">
       </div>
     </aside>
@@ -120,7 +120,9 @@
       <div class="content-wrapper">
         <article>
           <h2>Be a better team in 5 days, like these.</h2>
-          <img src="img/retreat-review.png" alt="Retreat Review"/>
+          <div class="review-img">
+            <img src="img/retreat-review.png" alt="Retreat Review"/>
+          </div>
           <div class="review-text">
             <h3>LaCrue Bottling Co. October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
