Added responsive images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/logo.png" alt="Unplugged Logo"/></a>
+      <figure>
+        <a href="#">
+          <img src="img/logo.png" alt="Unplugged Logo"/>
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -63,7 +67,11 @@
         <h2>Have the work week you always dreamed of &ndash; without the bad wifi</h2>
         <article>
           <div class="features-items">
-            <img src="img/campground.png" alt="Campground"/>
+            <figure>
+              <a href="#">
+                <img src="img/campground.png" alt="Campground"/>
+              </a>
+            </figure>
           </div>
           <div class="features-items-description">
             <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -72,7 +80,11 @@
 
         <article>
           <div class="features-items">
-            <img src="img/bed.png" alt="Bed"/>
+            <figure>
+              <a href="#">
+                <img src="img/bed.png" alt="Bed"/>
+              </a>
+            </figure>
           </div>
           <div class="features-items-description">
             <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
@@ -81,7 +93,11 @@
 
         <article>
           <div class="features-items">
-          <img src="img/utensils.png" alt="Utensils"/>
+          <figure>
+            <a href="#">
+              <img src="img/utensils.png" alt="Utensils"/>
+            </a>
+          </figure>
           </div>
           <div class="features-items-description">
             <p>Private chef team providing on demand meals &ndash; just like your team kitchen.</p>
@@ -90,7 +106,11 @@
 
         <article>
           <div class="features-items">
-            <img src="img/shoe-prints.png" alt="Shoe Prints"/>
+            <figure>
+              <a href="#">
+                <img src="img/shoe-prints.png" alt="Shoe Prints"/>
+              </a>
+            </figure>
           </div>
           <div class="features-items-description">
             <p>5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
@@ -99,7 +119,11 @@
 
         <article>
           <div class="features-items">
-            <img src="img/smile.png" alt="Smile"/>
+            <figure>
+              <a href="#">
+                <img src="img/smile.png" alt="Smile"/>
+              </a>
+            </figure>
           </div>
           <div class="features-items-description">
             <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
@@ -108,7 +132,11 @@
 
         <article>
           <div class="features-items">
-            <img src="img/wifi.png" alt="Wifi"/>
+            <figure>
+              <a href="#">
+                <img src="img/wifi.png" alt="Wifi"/>
+              </a>
+            </figure>
           </div>
           <div class="features-items-description">
             <p>Dedicated computer room for times that you must wifi.</p>
@@ -118,11 +146,13 @@
     </section>
     <section class="reviews">
       <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
         <article>
-          <h2>Be a better team in 5 days, like these.</h2>
-          <div class="review-img">
-            <img src="img/retreat-review.png" alt="Retreat Review"/>
-          </div>
+          <figure>
+            <a href="#">
+              <img src="img/retreat-review.png" alt="Retreat Review"/>
+            </a>
+          </figure>
           <div class="review-text">
             <h3>LaCrue Bottling Co. October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
