Added Features Icons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-
+  <!--- Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <!--- Icon Font -->
+  <script src="https://kit.fontawesome.com/aea22e8724.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -67,11 +69,9 @@
         <h2>Have the work week you always dreamed of &ndash; without the bad wifi</h2>
         <article>
           <div class="features-items">
-            <figure>
-              <a href="#">
-                <img src="img/campground.png" alt="Campground"/>
-              </a>
-            </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -80,11 +80,9 @@
 
         <article>
           <div class="features-items">
-            <figure>
-              <a href="#">
-                <img src="img/bed.png" alt="Bed"/>
-              </a>
-            </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
@@ -93,11 +91,9 @@
 
         <article>
           <div class="features-items">
-          <figure>
-            <a href="#">
-              <img src="img/utensils.png" alt="Utensils"/>
-            </a>
-          </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>Private chef team providing on demand meals &ndash; just like your team kitchen.</p>
@@ -106,11 +102,9 @@
 
         <article>
           <div class="features-items">
-            <figure>
-              <a href="#">
-                <img src="img/shoe-prints.png" alt="Shoe Prints"/>
-              </a>
-            </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
@@ -119,11 +113,9 @@
 
         <article>
           <div class="features-items">
-            <figure>
-              <a href="#">
-                <img src="img/smile.png" alt="Smile"/>
-              </a>
-            </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
@@ -132,11 +124,9 @@
 
         <article>
           <div class="features-items">
-            <figure>
-              <a href="#">
-                <img src="img/wifi.png" alt="Wifi"/>
-              </a>
-            </figure>
+            <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
+            </p>
           </div>
           <div class="features-items-description">
             <p>Dedicated computer room for times that you must wifi.</p>
