--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,11 @@
 
   <meta name="theme-color" content="#fafafa">
 
+  <!--- Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <!--- Icon Font -->
+  <script src="https://kit.fontawesome.com/aea22e8724.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
