Added Social Icon in Footer

--- a/index.html
+++ b/index.html
@@ -166,11 +166,21 @@
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-          <ul>
-            <li><img src="img/facebook.png" alt="Facebook"></li>
-            <li><img src="img/twitter.png" alt="Twitter"></li>
-            <li><img src="img/instagram.png" alt="Instagram"></li>
-          </ul>
+          <p>
+            <a href="#">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </p>
+          <p>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </p>
+          <p>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </p>
         </div>
       </div>
 
